--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 <head>
 <title>CSCE 190: [JaNyah Gurley]</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>[JaNyah Gurley]</h1>
-<p>Here is a edit</p>
+
+<h2>About me</h2>
+<div class="about"></div>
+
+<h2>Skills</h2>
+<div class="skills"></div>
+
+<h2>Highlighted projects</h2>
+<div class="projects"></div>
+
+<h2>Contact me</h2>
+<div class="contact"></div>
 </body>
 </html>
