--- a/index.html
+++ b/index.html
@@ -14,8 +14,19 @@
 <div class="skills"></div>
 
 <h2>Highlighted projects</h2>
-<div class="projects"></div>
+<div class = "projects">
+<!-- Problem Statement Assignment -->
+<section class="project">
+    <a href="files/problem.statement.png.pdf">
+        <h3>Problem Statement</h3>
+    </a>
+    <a href="files/problem.statement.png.pdf">
+        <img src="images/problem.statement.png">
+    </a>
+    <p>One sentence to describe your problem</p>
+</section>
 
+    </div>
 <h2>Contact me</h2>
 <div class="contact"></div>
 </body>
