--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div class = "projects">
 <!-- Problem Statement Assignment -->
 <section class="project">
-    <a href="files/problem.statement.png.pdf">
+    <a href="files/problem.statement.pdf">
         <h3>Problem Statement</h3>
     </a>
-    <a href="files/problem.statement.png.pdf">
+    <a href="files/problem.statement.pdf">
         <img src="images/problem.statement.png">
     </a>
     <p>One sentence to describe your problem</p>
