--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="files/problem.statement.pdf">
         <img src="images/problem.statement.png">
     </a>
-    <p>One sentence to describe your problem</p>
+    <p>Describe your problem</p>
     </section>
 
     </div>
