--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
     <a href="files/problem.statement.pdf">
         <img src="images/problem.statement.png">
     </a>
-    <p>Describe your problem</p>
+    <p>One sentence to describe your problem</p>
     </section>
 
     </div>
 
-<h2>Contant me</h2>
+<h2>Contact me</h2>
 <div class="contact"></div>
 </body>
 </html>
