--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <div class = "projects">
     <!-- Problem Statement Assignment -->
     <section class="project">
-    <a href="files/problem.statement.pdf">
+    <a href="Files/problem.statement.pdf">
         <h3>Problem Statement</h3>
     </a>
-    <a href="files/problem.statement.pdf">
-        <img src="images/problem.statement.png">
+    <a href="Files/problem.statement.pdf">
+        <img src="Images/problem.statement.png">
     </a>
     <p>One sentence to describe your problem</p>
     </section>
