--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="Files/problem.statement.pdf">
     <img src="Images/problem.statement.png">
     </a>
-    <p>One sentence to describe your problem</p>
+    <p>Twitter has too many spam accounts and free speech on the platform is too limited</p>
     </section>
 
     </div>
