--- a/index.html
+++ b/index.html
@@ -27,7 +27,20 @@
     <p>Twitter has too many spam accounts and free speech on the platform is too limited</p>
     </section>
 
-    </div>
+    <!--Affinity Diagram Assignment -->
+    <section class="project">
+        <a href="Files/JaNyah and Tania.pdf">
+            <h3>Affinity Diagram</h3>
+        </a>
+        <a href="Files/JaNyah and Tania.pdf">
+            <img src="Images/JaNyah and Tania.png">
+        </a>
+        <p>
+        Affinity Diagram with 5 categories and 20 ideas about Twitter having too many spam accounts and free speech on the platform is too limited
+        </p>
+    </section>
+</div>
+
 
 <h2>Contact me</h2>
 <div class="contact"></div>
