--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="Images/JaNyah and Tania.png">
         </a>
         <p>
-        Affinity Diagram with 5 categories and 20 ideas about Twitter having too many spam accounts and free speech on the platform is too limited
+        We tackled the issue of Twitter's spam overload and limited free speech. By brainstorming solutions, we grouped ideas like enhanced bot detection, customizable filters, transparent moderation, and business models into clear categories, laying the groundwork for a more open and secure platform.
         </p>
     </section>
 </div>
