--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <a href="Files/Sketches.pdf">
 
 
-        <img src="Images/Sketches.png">
+        <img src="Images/Sketches.png" width="300">
     </a>
     <p>
 
