--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
     These sketches showcase the website in action across different user scenarios. For user Mia Chen, the screens highlight event creation, RSVP management, and registration confirmation. For user James Thompson the focus is on campaign performance, client engagement metrics, and quick response notifications. For user Sarah Martinez the sketch shows workshop setup, attendee registration, and post-event feedback management. Each interface emphasizes seamless, cross-device functionality without spam or bots.
     </p>
     </section>
-
+<!--Paper Prototype Assignment-->
+    <section class="project">
+        <a href="https://www.youtube.com/watch?v=Oz1t_dettLk">
+            <h3> Prototype</h3>
+        </a>
+        <a href="https://www.youtube.com/watch?v=Oz1t_dettLk">\
+            <img src="Images/IMG_5575.jpeg">
+        </a>
+        <p> Brief description of your prototype </p>
+        </section>
 </div>
 
 
