--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <a href="https://www.youtube.com/watch?v=Oz1t_dettLk">\
             <img src="Images/IMG_5575.jpeg">
         </a>
-        <p> Brief description of your prototype </p>
+        <p> This is an app that easily reports spams and bots. </p>
         </section>
 </div>
 
