--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="about">
     <img src="Images/IMG_0895.jpeg">
     <p>
-    This is a really awesome personal statement!
+    Hello! Welcome to my personal portfilio. My name is JaNyah Gurley, a freshman computer information science student at the University of South Carolina.
     </p>
     </div>
 
