--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- About Me -->
 <h2> About Me </h2>
 <div class="about">
-<img src="Images/IMG_0895.jpeg">
+<img src="Images/IMG_0895.jpeg" width="400">
 <p>
 Hello. Welcome to my personal portfilio. My name is JaNyah Gurley, a freshman computer information science student at the University of South Carolina.
 </p>
