--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="about">
 <img src="Images/IMG_0895.jpeg" width="400">
 <p>
-Hello. Welcome to my personal portfilio. My name is JaNyah Gurley, a freshman computer information science student at the University of South Carolina.
+Hello. Welcome to my personal portfilio. My name is JaNyah Gurley, a freshman Computer Information Science student at the University of South Carolina. I love learning new and easier ways to code in an efficient way. My personal mission is to specialize in cybersecurity after graduating college.
 </p>
 </div>
 
