--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@ Hello! Welcome to my personal portfilio. My name is JaNyah Gurley, a freshman Co
 </div>
 
 <h2>Skills</h2>
-<div class="skills"></div>
-
+<div class = "skills">
+    <p><b>Category 1:</b>Details for category 1</p>
+    <p><b>Category 2:</b>Details for category 2</p>
+    <p><b>Resume:</b><a href="Files/resume final.pdf">Download here</a> </p>
+    </div>
 
 <h2>Highlighted projects</h2>
 <div class = "projects">
