--- a/index.html
+++ b/index.html
@@ -74,10 +74,21 @@ Hello! Welcome to my personal portfilio. My name is JaNyah Gurley, a freshman Co
         </a>
         <p> This is an app that easily reports spams and bots.</p>
         </section>
+
+        <section class="project">
+            <a href="https://github.com/janyahgurley18/CSCE442">
+            <h3>Java code for CSCE 145</h3>
+            </a>
+            <a href="https://github.com/janyahgurley18/CSCE442">
+            <img src="Images/ilovejava.jpg">
+            </a>
+            <p>Example codes for Java programing in CSCE 145</p>
+            </section>
 </div>
 
 
 <h2>Contact me</h2>
 <div class="contact"></div>
+<p>email: jgurley18@icloud.com   call:843-687-5189</p>
 </body>
 </html>
